<resources>
    <string name="app_name">"Tourist Helper"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_path">PathActivity</string>
    <string-array name="types">
        <item>cafe</item>
        <item>bank</item>
        <item>hospital</item>
        <item>church</item>
        <item>bar</item>
        <item>store</item>
        <item>embassy</item>
        <item>park</item>
        <item>library</item>
        <item>museum</item>

    </string-array>
    <string-array name="radius">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
    </string-array>
    <string name="earth">Earth</string>
    <string name="moon">Moon</string>
    <string-array name="system">
        <item>@string/earth</item>
        <item>@string/moon</item>
    </string-array>
    <string name="radius_pref_title">Radius</string>
    <string name="types_pref_title">Types</string>
    <string name="radius_key">radius_key</string>
    <string name="types_key">types_key</string>
    <string name="user_first_name_key">user_first_name_key</string>
    <string name="user_email_key">user_email_key</string>
    <string name="user_first_name_default_value">User First Name</string>
    <string name="user_email_default_value">User Email</string>
    <string name="user_first_name_title">User First Name</string>
    <string name="user_email_title">User Email</string>
    <string name="no_information">No information</string>
    <string name="key_1">Key 1</string>
    <string name="key_2">Key 2</string>
    <string name="key_3">Key 3</string>
    <string name="key_4">Key 4</string>
    <string name="key_5">Key 5</string>
    <string name="key_6">Key 6</string>
    <string name="key_7">Key 7</string>
    <string name="key_8">Key 8</string>
    <string name="key_9">Key 9</string>
    <string name="key_10">Key 10</string>
    <string name="key_11">Key 11</string>
    <string name="key_12">Key 12</string>
    <string name="key_13">Key 13</string>
    <string name="key_14">Key 14</string>
    <string name="key_15">Key 15</string>
    <string name="key_16">Key 16</string>
    <string name="key_17">Key 17</string>
    <string name="key_18">Key 18</string>
    <string name="key_19">Key 19</string>
    <string name="key_20">Key 20</string>
    <string name="key_21">Key 21</string>
    <string name="key_22">Key 22</string>
    <string name="key_23">Key 23</string>
    <string name="key_24">Key 24</string>
    <string name="key_25">Key 25</string>
    <string name="key_26">Key 26</string>
    <string name="key_27">Key 27</string>
    <string name="key_28">Key 28</string>
    <string name="key_29">Key 29</string>
    <string name="key_30">Key 30</string>
    <string name="Title_1">1 Відрізняєтеся непосидючістю.</string>
    <string name="Title_2">2 Запальні і імпульсивні.</string>
    <string name="Title_3">3 Наполегливі, навіть уперті.</string>
    <string name="Title_4">4 Ритм вашої діяльності нерівномірний, стрибкоподібний.</string>
    <string name="Title_5">5 Любіть ризикувати.</string>
    <string name="Title_6">6 Вас приваблює все нове.</string>
    <string name="Title_7">7 Часто кидаєте почате на півдорозі</string>
    <string name="Title_8">8 Ретельне опрацювання деталей і кропітка праця не для вас.</string>
    <string name="Title_9">9 До змінених планів і нових обставинин звикаєте легко.</string>
    <string name="Title_10">10 Ви чуйні, любите спілкування.</string>
    <string name="Title_11">11 Ви не панікуєте навіть у складних ситуаціях, у вас відмінне самовладання.</string>
    <string name="Title_12">12 Ви розсіяні, неуважні.</string>
    <string name="Title_13">13 Ви обережні і розважливі.</string>
    <string name="Title_14">14 У вас існує чіткий режим дня, ви плануєте свої робочі справи.</string>
    <string name="Title_15">15 Витримані, вмієте вичікувати.</string>
    <string name="Title_16">16 Вам важко з ходу перемкнутися на іншу діяльність.</string>
    <string name="Title_17">17 Ви не любите багато рухатися, повільні.</string>
    <string name="Title_18">18 Нова обстановка викликає у вас замішання.</string>
    <string name="Title_19">19 Самотність не обтяжує вас.</string>
    <string name="Title_20">20 Ви не занадто витривалі, швидко втомлюєтеся.</string>
    <string name="Title_26">Key 26</string>
    <string name="Title_27">Key 27</string>
    <string name="Title_28">Key 28</string>
    <string name="Title_29">Key 29</string>
    <string name="Title_30">Key 30</string>
    <string-array name="values_1">
        <item>Не знаю</item>
        <item>Так</item>
        <item>Ні</item>
    </string-array>
    <string-array name="values_2">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_3">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_4">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_5">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_6">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_7">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_8">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_9">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_10">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_11">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_12">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_13">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_14">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_15">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_16">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_17">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_18">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_19">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_20">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_21">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_22">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_23">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_24">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_25">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_26">
        <item>values 1</item>
        <item>values 2</item>
        <item>values 3</item>
    </string-array>
    <string-array name="values_27">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_28">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_29">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="values_30">
        <item>Тест 1</item>
        <item>Тест 2</item>
        <item>Тест 3</item>
    </string-array>
    <string-array name="text_array">
        <item>Null</item>
        <item>Вам важко постійно залишатись на одному місці.</item>
        <item>Детальне планування подорожі, не для Вас, оскільки Вам подобається спонтанно приймати рішення та втілювати їх у життя.</item>
        <item>Попри  нетерплячість, вам подобаються  тривалі тури та складні цілі, навіть, якщо це Еверест!</item>
        <item>Найбільше підходять подорожі, які комбінують в собі різнотипові види діяльності, Вам завжди хочеться все, і одразу. </item>
    </string-array>
    <string name="property_1">Вам важко постійно залишатись на одному місці.</string>
    <string name="property_2">Детальне планування подорожі, не для Вас, оскільки Вам подобається спонтанно приймати рішення та втілювати їх у життя.</string>
    <string name="property_3">Попри  нетерплячість, вам подобаються  тривалі тури та складні цілі, навіть, якщо це Еверест!</string>
    <string name="property_4">Найбільше підходять подорожі, які комбінують в собі різнотипові види діяльності, Вам завжди хочеться все, і одразу. </string>
    <string name="property_5">Стрибок з парашутом? Занурення на значні глибини? А чому б і ні? Це ж так цікаво!</string>
    <string name="property_6">Ніколи не відмовитесь, якщо запропонують щось нове. Це може бути екзотична страва або розвага, котру Вам не випадала можливісь спробувати. чим більше в подорожі нового, тим кращою вона для Вас є!</string>
    <string name="property_7">Ну що ж, до Евересту, Вам, можливо, не дійти, але не складні піші прогулянки по горам сподобаються.</string>
    <string name="property_8">При плануванні подорожі деталі Вам не важливі, все саме складеться під час її реалізації.</string>
    <string name="property_9">Якщо погода зрушить Вам всі плани, то нічого страшного - завжди можна перепланувати!</string>
    <string name="property_10">Ви любите шумні компанії, та не боїтесь нових знайомств.</string>
    <string name="property_11">Допускається відвідування туристичні напрямки навіть з високим рівнем небезпеки, наприклад країни з складною соціально-політичною ситуацією.</string>
    <string name="property_12">Ну що ж, до Евересту, Вам, можливо, не дійти, але не складні піші прогулянки по горам сподобаються.</string>
    <string name="property_13">Не любите ризикувати, все обдумовуєте наперед.</string>
    <string name="property_14">Ви детально обираєте кожну цільову точку подорожі, завжди знаєте чого хочеться.</string>
    <string name="property_15">Вас не лякають тривалі переїзди.</string>
    <string name="property_16">Повільні тури з частими та тривалими зупинками - це саме те, на що потрібно звернути увагу!</string>
    <string name="property_17">Вам сподобаються подорожі з відпочинком на пляжі, відвідуванням Спа-салонів, повільними прогулянками по узбережжю.</string>
</resources>